--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "name": "getir-clone",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://MertSoyunmezoglu.github.io/getir_clone",
+  "homepage": "https://MertSoyunmezoglu.github.io/getir_clone",
   "dependencies": {
+    "@react-hook/window-size": "^3.0.7",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.5",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.8.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "reactstrap": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -20,8 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
