--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://MertSoyunmezoglu.github.io/getir_clone",
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@react-hook/window-size": "^3.0.7",
     "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/forms": "^0.5.2",
