cards and google maps extension added

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@
  REACT_APP_STORAGE_BUCKET=mert-auth.appspot.com
  REACT_APP_MEESAGING_SENDER_ID=91953277204
  REACT_APP_ID=1:91953277204:web:113ac1c6a99946ad5e3a01
+ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyCvq_GMUwh_huTUeeFy9LSYtez_gMqcE8Q"
