--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://MertSoyunmezoglu.github.io/getir_clone",
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@react-google-maps/api": "^2.12.1",
     "@react-hook/window-size": "^3.0.7",
     "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/forms": "^0.5.2",
@@ -19,6 +20,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
