--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
+    "react-phone-number-input": "^3.2.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
