--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.5",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
     "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.7",
     "reactstrap": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
