--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "getir-clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MertSoyunmezoglu.github.io/getir_clone",
+  "homepage": "https://MertSoyunmezoglu.github.io/",
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@react-google-maps/api": "^2.12.1",
